[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "granian>=2.3.1",
    "litestar[jinja,standard]>=2.16.0",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = ["poethepoet>=0.34.0", "ruff>=0.11.11"]

[tool.uv]

[tool.poe.tasks]
dev = "granian --interface asgi src.main:app"
start = "granian --interface asgi src.main:app"
format = "ruff format ."
lint = "ruff check --fix ."
